feat: Lógica de recursos de usuario implementada, funcionalidad de VNC lista (acceso sin auth y UI mejorada) y handling de los mensajes de error de los módulos relacionados a la gestión de slices

--- a/src/main/resources/static/novnc/vnc.html
+++ b/src/main/resources/static/novnc/vnc.html
@@ -66,7 +66,7 @@
 
             <div class="noVNC_scroll">
 
-            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
+            <h1 class="noVNC_logo" translate="no"><span>Open</span><br>Cluster</h1>
 
             <hr>
 
@@ -261,10 +261,10 @@
     <!-- Connect button -->
     <div class="noVNC_center">
         <div id="noVNC_connect_dlg">
-            <p class="noVNC_logo" translate="no"><span>no</span>VNC</p>
+            <p class="noVNC_logo" translate="no"><span>Open</span>Cluster</p>
             <div>
                 <button id="noVNC_connect_button">
-                    <img alt="" src="app/images/connect.svg"> Connect
+                    <img alt="" src="app/images/connect.svg"> Acceder a la VM
                 </button>
             </div>
         </div>
